name:                eve
version:             0.1.4
synopsis: An extensible event framework
description: An extensible event-driven application framework in haskell for building embarassingly modular software.
homepage:            https://github.com/ChrisPenner/eve#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Eve
                     , Eve.Testing
                     , Eve.Internal.Actions
                     , Eve.Internal.AppState
                     , Eve.Internal.Async
                     , Eve.Internal.Events
                     , Eve.Internal.States
                     , Eve.Internal.Listeners
                     , Eve.Internal.Run
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , lens
                     , free
                     , data-default
                     , containers
  default-language:    Haskell2010

test-suite eve-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Fixtures
                     , EveSpec
                     , Eve.Internal.AsyncSpec
                     , Eve.Internal.ActionsSpec
                     , Eve.Internal.StatesSpec
                     , Eve.Internal.EventsSpec
                     , Eve.Internal.ListenersSpec
                     , Eve.Internal.RunSpec
  build-depends:       base
                     , eve
                     , hspec
                     , hspec-core
                     , lens
                     , mtl
                     , data-default
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/eve
