name:                reflex
version:             0.1.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/reflex#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Reflex
                     , Reflex.Internal.Async
                     , Reflex.Internal.App
                     , Reflex.Internal.Events
                     , Reflex.Internal.Extensions
                     , Reflex.Internal.Listeners
                     , Reflex.Internal.Run
  build-depends:       base >= 4.7 && < 5
                     , mtl
                     , lens
                     , pipes
                     , pipes-parse
                     , pipes-concurrency
                     , data-default
                     , containers
  default-language:    Haskell2010

test-suite reflex-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Fixtures
                     , ReflexSpec
                     , Reflex.Internal.AsyncSpec
                     , Reflex.Internal.ExtensionsSpec
                     , Reflex.Internal.EventsSpec
                     , Reflex.Internal.ListenersSpec
                     , Reflex.Internal.RunSpec
  build-depends:       base
                     , reflex
                     , hspec
                     , hspec-core
                     , lens
                     , mtl
                     , data-default
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/reflex
