name:                tunnel-crawler
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ChrisPenner/tunnel-crawler#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Penner
maintainer:          christopher.penner@gmail.com
copyright:           2017 Chris Penner
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib, Extension
  build-depends:       base >= 4.7 && < 5
                     , eve == 0.1.7
                     , mtl
                     , data-default
                     , lens
                     , random
  default-language:    Haskell2010

executable tunnel-crawler-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tunnel-crawler
  default-language:    Haskell2010

test-suite tunnel-crawler-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tunnel-crawler
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ChrisPenner/tunnel-crawler
